--- a/index.html
+++ b/index.html
@@ -10,11 +10,16 @@
         <h1>Formulario </h1>
         <hr style="color:red; background-color:red; width:50%;" />
         <p><input type="text" id="boleta" required placeholder="Boleta"></p>
+         <br><output id="salidaBoleta"></output>
         <p><input type="text" id="nombre" required placeholder="Nombre"></p>
+         <br><output id="salidaNombre"></output>
         <p><input type="text" id="grupo" required placeholder="Grupo"></p>
+          <br><output id="salidaGrupo"></output>
         <p><input type="text" id="materia" required placeholder="Materia"></p>
+          <br><output id="salidaMateria"></output>
         <p>Fecha: 
         <input type="date" id="fecha" required placeholder="Fecha"> </p>
+         <br><output id="salidaFecha"></output>
         
       <p>
         <button type="submit">Enviar</button>
