--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
         <h1>Formulario </h1>
         <hr style="color:red; background-color:red; width:50%;" />
         <p><input type="text" id="boleta" required placeholder="Boleta"></p>
-         <br><output id="salidaBoleta"></output>
+             <p><output id="salidaBoleta"></output></p>
         <p><input type="text" id="nombre" required placeholder="Nombre"></p>
-         <br><output id="salidaNombre"></output>
+         <p><output id="salidaNombre"></output></p>
         <p><input type="text" id="grupo" required placeholder="Grupo"></p>
-          <br><output id="salidaGrupo"></output>
+          <p><output id="salidaGrupo"></output></p>
         <p><input type="text" id="materia" required placeholder="Materia"></p>
-          <br><output id="salidaMateria"></output>
+          <p><output id="salidaMateria"></output></p>
         <p>Fecha: 
         <input type="date" id="fecha" required placeholder="Fecha"> </p>
-         <br><output id="salidaFecha"></output>
+         <p><output id="salidaFecha"></output></p>
         
       <p>
         <button type="submit">Enviar</button>
@@ -27,5 +27,5 @@
          </form>
      
     </body>
-    <script src="js/enviar.js"></script>
+    <script src="cmp/enviar.js"></script>
 </html>
