--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/estilos.css">
+        <script type="module" src="cmp/enviar.js"></script>
     </head>
     <body>
          <form id="formulario" action="javascript:enviar();">
@@ -25,7 +26,10 @@
         <button type="submit">Enviar</button>
       </p>
          </form>
-     
+        <footer>
+            Copyright Yuliana Ortiz
+        </footer>
+     <script src="cmp/enviar.js"></script>
     </body>
-    <script src="cmp/enviar.js"></script>
+    
 </html>
