--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <script type="module" src="cmp/enviar.js"></script>
     </head>
     <body>
-         <form id="formulario" action="javascript:enviar();">
+         <form id="formu" action="javascript:enviar();">
         <h1>Formulario </h1>
         <hr style="color:red; background-color:red; width:80%;" />
         <p><input type="text" id="boleta" required placeholder="Boleta"></p>
